Fix spacing add btn hover

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ html {
 
 body {
   margin: 0;
+  float: left;
+  float: right;
 }
 
 .rel {
@@ -28,14 +30,14 @@ body {
 }
 
 h2 {
-font-family: "Roboto Condensed", sans-serif;
-font-size: 3rem;
-position: absolute;
-top: 8%;
-left: 40%;
-max-width: 45em;
-margin: 0;
-padding-right: 1em;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+  position: absolute;
+  top: 8%;
+  left: 40%;
+  max-width: 45em;
+  margin: 0;
+  padding-right: 1em;
 }
 
 p {
@@ -59,6 +61,10 @@ p {
   text-decoration: none;
   position: absolute;
   bottom: 0;
+}
+
+.btn:hover {
+  background-color: #000;
 }
 
 .btn-big {
